php: Streamline vendor file location with local dev-env
phpstan is not run with an action anymore, as the action runs
it its own docker container and hence has no access to files
outside the repository root. A side-effect of this is, that
phpstan now **really** runs with the php version set up by
the matrix.

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -13,7 +13,9 @@ parameters:
         - library
 
     scanDirectories:
-        - vendor
+        - /icingaweb2
+        - /usr/share/icinga-php/ipl
+        - /usr/share/icinga-php/vendor
 
     ignoreErrors:
         -
