phpstan-baseline: Correct outdated error pattern
The latest phpstan release produces a different error
hence the pattern needs to be adjusted.

--- a/phpstan-baseline-standard.neon
+++ b/phpstan-baseline-standard.neon
@@ -176,7 +176,7 @@ parameters:
 			path: application/controllers/EventRuleController.php
 
 		-
-			message: "#^Parameter \\#1 \\$iterator of function iterator_to_array expects Traversable, ipl\\\\Orm\\\\Model\\|null given\\.$#"
+			message: "#^Parameter \\#1 \\$iterator of function iterator_to_array expects iterable, ipl\\\\Orm\\\\Model\\|null given\\.$#"
 			count: 1
 			path: application/controllers/EventRuleController.php
 
