--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -17,12 +17,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: ['7.2', '7.3', '7.4', '8.0', '8.1', '8.2']
+        php: ['7.2', '7.3', '7.4', '8.0', '8.1', '8.2', '8.3']
         os: ['ubuntu-latest']
 
     steps:
       - name: Checkout code base
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
@@ -31,10 +31,7 @@ jobs:
           tools: phpcs
 
       - name: Setup dependencies
-        run: composer require -n --no-progress overtrue/phplint phpstan/phpstan
-          && sudo git clone --depth 1 https://github.com/Icinga/icingaweb2.git /icingaweb2
-          && sudo git clone --depth 1 -b snapshot/nightly https://github.com/Icinga/icinga-php-library.git /usr/share/icinga-php/ipl
-          && sudo git clone --depth 1 -b snapshot/nightly https://github.com/Icinga/icinga-php-thirdparty.git /usr/share/icinga-php/vendor
+        run: composer require -n --no-progress overtrue/phplint
 
       - name: PHP Lint
         if: ${{ ! cancelled() }}
@@ -43,10 +40,6 @@ jobs:
       - name: PHP CodeSniffer
         if: ${{ ! cancelled() }}
         run: phpcs -wps --colors
-
-      - name: PHPStan
-        if: ${{ ! cancelled() }}
-        run: ./vendor/bin/phpstan analyse
 
   test:
     name: Unit tests with php ${{ matrix.php }} on ${{ matrix.os }}
@@ -58,7 +51,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: ['7.2', '7.3', '7.4', '8.0', '8.1', '8.2']
+        php: ['7.2', '7.3', '7.4', '8.0', '8.1', '8.2', '8.3']
         os: ['ubuntu-latest']
         include:
           - php: '7.2'
@@ -72,7 +65,7 @@ jobs:
 
     steps:
       - name: Checkout code base
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
