--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -7,8 +7,40 @@ on:
       - release/*
   pull_request:
     branches:
+      - main
 
 jobs:
+  lint:
+    name: Static analysis for php ${{ matrix.php }} on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      fail-fast: false
+      matrix:
+        php: ['8.2', '8.3', '8.4']
+        os: ['ubuntu-latest']
+
+    steps:
+      - name: Checkout code base
+        uses: actions/checkout@v4
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php }}
+          tools: phpcs
+
+      - name: Setup dependencies
+        run: composer require -n --no-progress overtrue/phplint
+
+      - name: PHP Lint
+        if: ${{ ! cancelled() }}
+        run: ./vendor/bin/phplint -n --exclude={^vendor/.*} -- .
+
+      - name: PHP CodeSniffer
+        if: ${{ ! cancelled() }}
+        run: phpcs -wps --colors
+
   test:
     name: Unit tests with php ${{ matrix.php }} on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
@@ -19,7 +51,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: ['8.4']
+        php: ['8.2', '8.3', '8.4']
         os: ['ubuntu-latest']
 
     services:
@@ -67,12 +99,6 @@ jobs:
           git clone --depth 1 https://github.com/Icinga/icingaweb2.git _icingaweb2
           ln -s `pwd` _icingaweb2/modules/notifications
 
-      - name: Configure Icinga Web logging
-        run: |
-          ls -la _icingaweb2
-          ls -la _icingaweb2/etc
-          ls -la _icingaweb2/test
-
       - name: Setup Libraries
         run: |
           mkdir _libraries
@@ -85,3 +111,26 @@ jobs:
             -e "CREATE DATABASE icingaweb; CREATE USER icingaweb@'%' IDENTIFIED BY 'icingaweb'; GRANT ALL ON icingaweb.* TO icingaweb@'%';"
           PGPASSWORD=icinga_unittest psql --host="127.0.0.1" --port="${{ job.services.pgsql.ports['5432'] }}" \
             --username "icinga_unittest" -c "CREATE DATABASE icingaweb;"
+
+      - name: PHPUnit
+        env:
+          ICINGAWEB_LIBDIR: _libraries
+          ICINGAWEB_PATH: _icingaweb2
+          ICINGA_NOTIFICATIONS_SCHEMA: test/schema
+          MYSQL_TESTDB: icinga_unittest
+          MYSQL_TESTDB_HOST: 127.0.0.1
+          MYSQL_TESTDB_PORT: ${{ job.services.mysql.ports['3306'] }}
+          MYSQL_TESTDB_USER: icinga_unittest
+          MYSQL_TESTDB_PASSWORD: icinga_unittest
+          MYSQL_ICINGAWEBDB: icingaweb
+          MYSQL_ICINGAWEBDB_PASSWORD: icingaweb
+          MYSQL_ICINGAWEBDB_USER: icingaweb
+          PGSQL_TESTDB: icinga_unittest
+          PGSQL_TESTDB_HOST: 127.0.0.1
+          PGSQL_TESTDB_PORT: ${{ job.services.pgsql.ports['5432'] }}
+          PGSQL_TESTDB_USER: icinga_unittest
+          PGSQL_TESTDB_PASSWORD: icinga_unittest
+          PGSQL_ICINGAWEBDB: icingaweb
+          PGSQL_ICINGAWEBDB_PASSWORD: icinga_unittest
+          PGSQL_ICINGAWEBDB_USER: icinga_unittest
+        run: phpunit --bootstrap _icingaweb2/test/php/bootstrap.php
