--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -1,140 +1,21 @@
-name: PHP Tests
+name: CI
 
 on:
   push:
     branches:
       - main
-      - release/*
+      - support/*
   pull_request:
     branches:
       - main
 
 jobs:
-  lint:
-    name: Static analysis for php ${{ matrix.php }} on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-
-    strategy:
-      fail-fast: false
-      matrix:
-        php: ['8.2', '8.3', '8.4']
-        os: ['ubuntu-latest']
-
-    steps:
-      - name: Checkout code base
-        uses: actions/checkout@v4
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: ${{ matrix.php }}
-          tools: phpcs
-
-      - name: Setup dependencies
-        run: composer require -n --no-progress overtrue/phplint
-
-      - name: PHP Lint
-        if: ${{ ! cancelled() }}
-        run: ./vendor/bin/phplint -n --exclude={^vendor/.*} -- .
-
-      - name: PHP CodeSniffer
-        if: ${{ ! cancelled() }}
-        run: phpcs -wps --colors
-
-  test:
-    name: Unit tests with php ${{ matrix.php }} on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-
-    env:
-      phpunit-version: 10.0
-
-    strategy:
-      fail-fast: false
-      matrix:
-        php: ['8.2', '8.3', '8.4']
-        os: ['ubuntu-latest']
-
-    services:
-      mysql:
-        image: mariadb
-        env:
-          MYSQL_ROOT_PASSWORD: root
-          MYSQL_DATABASE: icinga_unittest
-          MYSQL_USER: icinga_unittest
-          MYSQL_PASSWORD: icinga_unittest
-        options: >-
-          --health-cmd "mariadb -s -uroot -proot -e'SHOW DATABASES;' 2> /dev/null | grep icinga_unittest > test"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          - 3306/tcp
-
-      pgsql:
-        image: postgres
-        env:
-          POSTGRES_USER: icinga_unittest
-          POSTGRES_PASSWORD: icinga_unittest
-          POSTGRES_DB: icinga_unittest
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          - 5432/tcp
-
-    steps:
-      - name: Checkout code base
-        uses: actions/checkout@v4
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: ${{ matrix.php }}
-          tools: phpunit:${{ matrix.phpunit-version || env.phpunit-version }}
-
-      - name: Setup Icinga Web
-        run: |
-          git clone --depth 1 https://github.com/Icinga/icingaweb2.git _icingaweb2
-          ln -s `pwd` _icingaweb2/modules/notifications
-
-      - name: Setup Libraries
-        run: |
-          mkdir _libraries
-          git clone --depth 1 -b snapshot/nightly https://github.com/Icinga/icinga-php-library.git _libraries/ipl
-          git clone --depth 1 -b snapshot/nightly https://github.com/Icinga/icinga-php-thirdparty.git _libraries/vendor
-
-      - name: Checkout Icinga Notifications Daemon
-        run: |
-          git clone --depth 1 -b main https://github.com/Icinga/icinga-notifications.git _notifications_daemon
-
-      - name: Initialize Icinga Web
-        run: |
-          mysql --host="127.0.0.1" --port="${{ job.services.mysql.ports['3306'] }}" --user="root" --password="root" \
-            -e "CREATE DATABASE icingaweb; CREATE USER icingaweb@'%' IDENTIFIED BY 'icingaweb'; GRANT ALL ON icingaweb.* TO icingaweb@'%';"
-          PGPASSWORD=icinga_unittest psql --host="127.0.0.1" --port="${{ job.services.pgsql.ports['5432'] }}" \
-            --username "icinga_unittest" -c "CREATE DATABASE icingaweb;"
-
-      - name: PHPUnit
-        env:
-          ICINGAWEB_LIBDIR: _libraries
-          ICINGAWEB_PATH: _icingaweb2
-          ICINGA_NOTIFICATIONS_SCHEMA: _notifications_daemon/schema
-          MYSQL_TESTDB: icinga_unittest
-          MYSQL_TESTDB_HOST: 127.0.0.1
-          MYSQL_TESTDB_PORT: ${{ job.services.mysql.ports['3306'] }}
-          MYSQL_TESTDB_USER: icinga_unittest
-          MYSQL_TESTDB_PASSWORD: icinga_unittest
-          MYSQL_ICINGAWEBDB: icingaweb
-          MYSQL_ICINGAWEBDB_PASSWORD: icingaweb
-          MYSQL_ICINGAWEBDB_USER: icingaweb
-          PGSQL_TESTDB: icinga_unittest
-          PGSQL_TESTDB_HOST: 127.0.0.1
-          PGSQL_TESTDB_PORT: ${{ job.services.pgsql.ports['5432'] }}
-          PGSQL_TESTDB_USER: icinga_unittest
-          PGSQL_TESTDB_PASSWORD: icinga_unittest
-          PGSQL_ICINGAWEBDB: icingaweb
-          PGSQL_ICINGAWEBDB_PASSWORD: icinga_unittest
-          PGSQL_ICINGAWEBDB_USER: icinga_unittest
-        run: phpunit --bootstrap _icingaweb2/test/php/bootstrap.php
+  php:
+    name: PHP
+    uses: Icinga/github-actions/.github/workflows/php.yml@main
+    with:
+      databases: true
+      dependencies: |
+        {
+          "./vendor/icingaweb2-modules/icingadb" : "https://github.com/Icinga/icingadb-web.git"
+        }
